@@ -12,6 +12,7 @@
 	* flow: optimizations are now enabled by default
 	* flow: added support for unary bit-wise NOT operator
 	* flow: fixes to all boolean operators
+	* flow: builtin callee user-verification uses (optimized) IR instead of AST now.
 	* x0d: builtin workers() is now overloaded for workers(I)V and workers(i)V; no workers.affinity(i)V anymore.
 	* x0d: memory resource leak fixes upon program exit.
 	* x0d: adds sleep() shared function
